Begin adding UI animations

--- a/frontend/src/app/_common-styles/animation.scss
+++ b/frontend/src/app/_common-styles/animation.scss
@@ -1,3 +1,5 @@
+// CSS animation for moving small elements left and right
+// Designed for arrows and similar
 @keyframes move-left {
 	0% {
 		transform: translateX(0);
