Some more work on UI animation

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
         <h1>Chatty. <i class="fa-duotone fa-solid fa-comments"></i></h1>
     </header>
     <div class="app__container">
-        <div class="page-transitions-wrapper" [@routeAnimations]="prepareRoute(outlet)">
+        <div class="page-transitions-wrapper" [@routeAnimations]="prepareOutletForAnimation(outlet)">
             <router-outlet #outlet="outlet"></router-outlet>
         </div>
     </div>
