Make animations work for nested routes; styling tweaks

--- a/frontend/src/app/_common-styles/forms.scss
+++ b/frontend/src/app/_common-styles/forms.scss
@@ -9,10 +9,7 @@
 	&__header {
 
 		h1 {
-			font-size: 0.8rem;
-			font-weight: normal;
-			font-variation-settings: 'wght' 900;
-			text-transform: uppercase;
+			@include small-heading();
 			color: colour-contrast(map-get($colours, 'dark'));
 			text-align: center;
 		}
