--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,8 +3,8 @@
         <h1>Chatty. <i class="fa-duotone fa-solid fa-comments"></i></h1>
     </header>
     <div class="app__container">
-        <div class="page-transitions-wrapper" [@routeAnimations]="prepareOutletForAnimation(outlet)">
-            <router-outlet #outlet="outlet"></router-outlet>
+        <div class="page-transitions-wrapper" [@routeAnimations]="activeRouteAnimation">
+            <router-outlet></router-outlet>
         </div>
     </div>
     <footer class="app__footer">
