--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -81,3 +81,9 @@ app-groups,
 app-channels {
 	display: contents;
 }
+
+.page-transitions-wrapper {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
