--- a/frontend/src/app/page-content/page-content.component.html
+++ b/frontend/src/app/page-content/page-content.component.html
@@ -1,4 +1,9 @@
-<div class="page-content">
-    <h2 class="page-content__title">{{ title }}</h2>
+<section class="page-content">
+    <header class="page-content__header">
+        <h2 class="page-content__header__title">{{ title }}</h2>
+        <div class="page-content__header__actions">
+            <ng-content select="[actions]"></ng-content>
+        </div>
+    </header>
     <ng-content></ng-content>
-</div>
+</section>
