--- a/frontend/src/app/tooltip/tooltip.component.scss
+++ b/frontend/src/app/tooltip/tooltip.component.scss
@@ -2,6 +2,7 @@
 
 .tooltip {
 	position: relative;
+	display: block;
 
 	&__content {
 		display: block;
@@ -50,6 +51,7 @@
 			top: calc(100% + 0.5rem);
 			left: 50%;
 			transform: translate(-50%, -1rem);
+			min-width: 7rem;
 
 			&:before {
 				content: '';
@@ -64,7 +66,7 @@
 			}
 
 			&.visible {
-				transform: translate(-50%, -0.5rem);
+				transform: translate(-50%, -0.25rem);
 			}
 		}
 
