--- a/server/src/docs/_operation-forms.scss
+++ b/server/src/docs/_operation-forms.scss
@@ -1,10 +1,10 @@
 ﻿.swagger-ui .opblock {
-	
-	.btn, 
+
+	.btn,
 	.btn-group .btn,
 	select {
 		font-family: $body-font;
-		font-weight: 600;
+		font-variation-settings: 'wght' 600;
 		box-shadow: none;
 		border-radius: 0;
 		margin-left: 0;
@@ -13,56 +13,56 @@
 	.btn {
 		text-decoration: underline;
 		text-decoration-color: transparent;
-		
+
 		&:hover, &:focus, &:active {
 			text-decoration-color: currentColor;
 		}
 	}
-	
+
 	.btn-group .btn.try-out__btn {
 		&.cancel {
-			background: map-get($colors, 'dark');
-			border-color: map-get($colors, 'dark');
-			
+			background: map-get($colours, 'dark');
+			border-color: map-get($colours, 'dark');
+
 			&:hover, &:focus, &:active {
-				background: darken(map-get($colors, 'dark'), 20%);
+				background: darken(map-get($colours, 'dark'), 20%);
 			}
 		}
-		
+
 		&.reset {
 		}
 	}
-	
-	@each $operation, $color in $op_colors {
+
+	@each $operation, $color in $op_colours {
 		&-#{$operation} {
-			
-			.btn, 
+
+			.btn,
 			.btn-group .btn {
 				background: $color;
 				border-color: $color;
 				color: white;
-				
+
 				&:hover, &:focus, &:active {
 					background: darken($color, 10%);
 				}
 			}
 		}
 	}
-	
+
 	.parameters-container {
 		padding: 20px;
-		
+
 		.opblock-description-wrapper {
 			padding: 0;
 		}
 	}
-	
+
 	.table-container {
 		padding: 0;
-		
+
 		// Table details are in _operation-tables.scss
 	}
-	
+
 	.execute-wrapper {
 		padding-top: 0;
 	}
