--- a/server/src/docs/_swagger-ui-styles.scss
+++ b/server/src/docs/_swagger-ui-styles.scss
@@ -5,19 +5,19 @@ html {
 }
 
 $body-font: "area-variable", sans-serif;
-$colors: (
-	primary: #3e0897,
-	secondary: #da00a5,
-	success: #28f132,
-	alert: #ea1e3d,
-	warning: #ffa616,
+$colours: (
+	'primary': #3e0897,
+	'secondary': #da00a5,
+	'success': #28f132,
+	'alert': #ea1e3d,
+	'warning': #ffa616,
 	'dark': #3b4151
 );
-$op_colors: (
-	'get': map-get($colors, 'primary'),
-	'post': map-get($colors, 'secondary'),
-	'patch': map-get($colors, 'warning'),
-	'delete': map-get($colors, 'alert')
+$op_colours: (
+	'get': darken(map-get($colours, 'success'), 10%),
+	'post': map-get($colours, 'primary'),
+	'patch': map-get($colours, 'warning'),
+	'delete': map-get($colours, 'alert')
 );
 
 @import 'global';
