--- a/server/src/docs/_global.scss
+++ b/server/src/docs/_global.scss
@@ -31,8 +31,9 @@
 
 		pre {
 			border-radius: 0 !important;
-			font-size: 1rem;
-			line-height: 1.3;
+			font-size: 1rem !important;
+			line-height: 1.4 !important;
+			font-weight: normal !important;
 		}
 	}
 
