--- a/server/src/docs/swagger-ui-styles.css
+++ b/server/src/docs/swagger-ui-styles.css
@@ -28,8 +28,9 @@ html {
 }
 .swagger-ui .highlight-code pre {
   border-radius: 0 !important;
-  font-size: 1rem;
-  line-height: 1.3;
+  font-size: 1rem !important;
+  line-height: 1.4 !important;
+  font-weight: normal !important;
 }
 
 .swagger-ui .information-container {
